--- a/style.css
+++ b/style.css
@@ -10,6 +10,10 @@ a {
     color: #fffef1;
 }
 
+.main-content {
+    margin-bottom: 50px
+}
+
 .top-bar {
     display: flex;
     justify-content: space-between;
