--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
     background-color: #1a1a1a;
     color: #fffef1;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: "Inter";
     max-width: 850px;
     margin: 0 auto;
 }
