--- a/style.css
+++ b/style.css
@@ -24,3 +24,15 @@ a {
     display: flex;
     gap: 10px;
 }
+
+button {
+    display: inline-block;
+    background-color: #fffef1;
+    color: #1a1a1a;
+    font-family: 'Inter';
+    font-weight: 700;
+    font-size: 1rem;
+    padding: 0.7em 2.0em;
+    border-radius: 900px;
+    box-shadow: 0 2px 8px 0 rgba(255, 254, 217, 0.1)
+}
