fixed go back, changed up the menu and styles for donate page

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ a {
     color: #fffef1;
 }
 
-#about, #why, #price {
+#about, #why, #price, #intro, #transparency, #donate {
     margin-bottom: 50px;
 }
 
