--- a/style.css
+++ b/style.css
@@ -14,6 +14,11 @@ a {
     margin-bottom: 50px;
 }
 
+#footer {
+    margin-top: 65px;
+    text-align: center;
+}
+
 .top-bar {
     display: flex;
     justify-content: space-between;
