--- a/style.css
+++ b/style.css
@@ -10,8 +10,34 @@ a {
     color: #fffef1;
 }
 
-#about, #why, #price, #intro, #transparency, #donate {
+#relation {
+    gap: 10px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+#relation {
+    padding-bottom: 1px
+}
+
+#about {
     margin-bottom: 50px;
+}
+
+iframe {
+    border-radius: 20px;
+}
+
+#card {
+    margin-top: 10px;
+    color: #1a1a1a;
+    padding-right: 20px;
+    padding-left: 20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    background: #fffef1;
+    border-radius: 20px;
 }
 
 #footer {
@@ -23,6 +49,10 @@ a {
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+
+#pfp {
+    border-radius: 1000px;
 }
 
 .top-bar-right {
