--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
     background-color: #1a1a1a;
     color: #fffef1;
     font-family: "Inter";
-    max-width: 850px;
+    max-width: 900px;
     margin: 0 auto;
 }
 
@@ -62,6 +62,10 @@ iframe {
 .top-bar-right {
     display: flex;
     gap: 10px;
+}
+
+#rounded {
+    border-radius: 50px
 }
 
 button {
