--- a/style.css
+++ b/style.css
@@ -68,6 +68,15 @@ iframe {
     border-radius: 50px
 }
 
+.back {
+    background-color: rgb(0, 125, 0);
+    padding-top: 2px;
+    padding-bottom: 2px;
+    padding-left: 5px;
+    padding-right: 5px;
+    border-radius: 5px;
+}
+
 button {
     display: inline-block;
     background-color: #fffef1;
